# internal/cron/models/embedding_voyage_ai.go
@@ -10,12 +10,10 @@ import (
 	"strings"
 	"time"
 
+	v1 "github.com/moeru-ai/inventory/apis/inventoryapi/v1"
 	"github.com/moeru-ai/unspeech/pkg/utils"
 	"github.com/samber/lo"
 )
-
-type embeddingResult struct {
-}
 
 func EmbeddingVoyageAIVoyage3Large() {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Minute*5)
@@ -38,6 +36,9 @@ func EmbeddingVoyageAIVoyage3Large() {
 	if err != nil {
 		slog.Error("failed", slog.Any("error", err))
 		return
+	}
+	if res.Body != nil {
+		defer res.Body.Close()
 	}
 	if res.StatusCode >= 400 && res.StatusCode <= 599 {
 		switch {
@@ -67,10 +68,28 @@ func EmbeddingVoyageAIVoyage3Large() {
 
 	embedding := utils.GetByJSONPath[[]float64](m, "{ .data[0].embedding }")
 
-	model, ok := lo.Find(commonTasksEmbeddingModels, func(item *Model) bool {
-		return item.ID == "voyage-3-large"
+	model, ok := lo.Find(commonTasksEmbeddingModels, func(item *v1.GetModelsModelItem) bool {
+		return item.GetId() == "voyage-3-large"
 	})
 	if ok {
-		model.Dimensions = len(embedding)
+		model.GetEmbedding().Dimensions = int64(len(embedding))
+	} else {
+		commonTasksEmbeddingModels = append(commonTasksEmbeddingModels, &v1.GetModelsModelItem{
+			Id:                  "voyage-3-large",
+			Name:                "Voyage 3 Large",
+			Description:         "",
+			Deprecated:          false,
+			ProviderId:          "voyage.ai",
+			ProviderName:        "Voyage",
+			ProviderDescription: "",
+			Provider: &v1.GetModelsModelItem_Cloud{
+				Cloud: &v1.GetModelsModelItemProviderCloud{},
+			},
+			ModelType: &v1.GetModelsModelItem_Embedding{
+				Embedding: &v1.GetModelsModelItemEmbedding{
+					Dimensions: int64(len(embedding)),
+				},
+			},
+		})
 	}
 }
